# preenbird

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: launch.json
preenbird/: __init__.py  cli.py  config.py  detect.py  fcpxml.py  media.py  music.py  ollama_vlm.py  probe.py  reframe.py  render.py  score.py  store.py
preenbird.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
preenbird/review/: app.py
preenbird/review/static/: app.js  index.html  styles.css
